# wisio

./: .devcontainer.json  .gitattributes  .gitignore  .gitmodules  .wakatime-project  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  cm1_global_stats.yaml  cm1_timeline_metadata_stats.yaml  cm1_timeline_read_stats.yaml  cm1_timeline_write_stats.yaml  main.cpp  meson.build  packages.txt  pyproject.toml  recorder-to-parquet.sh  requirements.dev.txt  requirements.txt  result-cm1-formatted.txt  result-hacc-formatted.txt  result-hacc-old.txt  setup.py  streamlit_app.py
.github/workflows/: cd.yml  ci.yml
config_samples/: config_helper.py  darshan_dlp_1_40_local.yml  darshan_dlp_1_40_lsf.yml  darshan_dlp_4_40_local.yml  darshan_dlp_4_40_lsf.yml  darshan_dlp_8_40_local.yml  darshan_dlp_8_40_lsf.yml  darshan_local_dlp_1_40.yml  darshan_local_dlp_4_40.yml  darshan_local_dlp_8_40.yml  recorder_cm1_32_4_local.yml  recorder_cm1_32_4_lsf.yml  recorder_cm1_local.yml  recorder_cm1_lsf.yml  recorder_flash_sedov3d_hdf5_lsf.yml  recorder_genome_pegasus_32_lsf_.yml  recorder_hacc_32_0_lsf.yml  recorder_lbann_cosmoflow_32_lsf.yml  recorder_lbann_jag_32_lsf.yml  recorder_local.yml  recorder_local_cm1.yml  recorder_lsf.yml  recorder_montage_32_lsf.yml  recorder_montage_lsf.yml  recorder_montage_pegasus_32_lsf.yml  recorder_montage_pegasus_local.yml  recorder_montage_pegasus_lsf.yml  recorder_mummi_wemul_32_32_lsf.yml
converter/: CMakeLists.txt  recorder2parquet.cpp
dependency/: environment.yml  spack.yaml
docs/: conf.py  configuration.md  index.rst  quickstart.md  requirements.txt  tools.md
notebooks/: .gitignore  analysis-dftracer-bert-v100-node-16-v3-proc_name-time_range.ipynb  analysis-dftracer-bert-v100-node-16-v3.ipynb  analysis-dftracer-bert-v100-node-4-v1.ipynb  analysis-dftracer-cm1-node-1.ipynb  analysis-dftracer-cm1-node-32.ipynb  analysis-dftracer-cosmoflow-dlio-v100-node-16-v3-proc_name-time_range.ipynb  analysis-dftracer-cosmoflow-dlio-v100-node-16-v3.ipynb  analysis-dftracer-cosmoflow-dlio-v100-node-4-v1-proc_name-time_range.ipynb  analysis-dftracer-cosmoflow-dlio-v100-node-4-v1.ipynb  analysis-dftracer-deepspeed-dlio-node-16.ipynb  analysis-dftracer-deepspeed-dlio-scr-node-16.ipynb  analysis-dftracer-deepspeed-dlio-step100-node-16.ipynb  analysis-dftracer-montage-pegasus-dss-2deg-node-16-proc_name-time_range.ipynb  analysis-dftracer-montage-pegasus-dss-2deg-node-16.ipynb  analysis-dftracer-montage-pegasus-dss-2deg-node-4-proc_name-time_range.ipynb  analysis-dftracer-montage-pegasus-dss-2deg-node-4.ipynb  analysis-dftracer-resnet50-dlio-v100-node-16-v3-time.ipynb  analysis-dftracer-resnet50-dlio-v100-node-16-v3.ipynb  analysis-dftracer-resnet50-dlio-v100-node-4-v1-proc_name-time_range.ipynb  analysis-dftracer-resnet50-dlio-v100-node-4-v1.ipynb  analysis-dftracer-unet3d-dlio-v100-node-1-v1-time.ipynb  analysis-dftracer-unet3d-dlio-v100-node-1-v1.ipynb  analysis-dftracer-unet3d-dlio-v100-node-16-v2-proc_name-time_range.ipynb  analysis-dftracer-unet3d-dlio-v100-node-16-v2.ipynb  analysis.ipynb  analysis.py  bottleneck_selection_code.ipynb  bottlenecks-cm1.ipynb  bottlenecks-montage.ipynb  cluster_config_local.yml  cluster_config_lsf.yml  cm1.ipynb  cm1_files.json  cm1_metrics.json  cm1_timeline_metadata_stats.yaml  cm1_timeline_read_write_stats.yaml  cm1_timeline_write_stats.yaml  darshan-dlp.ipynb  darshan.ipynb  (+60 more)
notebooks/artifacts/: a1-serial-pipeline.ipynb  a1_serial_pipeline.py  a2-montage-bottlenecks.ipynb
notebooks/diagrams/: high-level-design.ipynb
notebooks/evals/: bottleneck-thresholds.ipynb  characterization-comparison.ipynb  data-reduction-prep.ipynb  data-reduction.ipynb  eval-cm1.csv  eval-hacc.csv  eval125m-mem.csv  eval1m.csv  eval200k.csv  eval5m-mem.csv  multi-perspective-view.ipynb  result-merger.ipynb  technical-challenges.ipynb
notebooks/pocs/: cm1.ipynb  darshan.ipynb  genome.ipynb  genome_metrics.json  montage.ipynb  slope.ipynb
results/: darshan_dlp_1_40_lsf.txt  darshan_dlp_4_40_lsf.txt  darshan_dlp_8_40_lsf.txt  recorder_cm1_32_4_lsf.txt  recorder_flash_sedov3d_hdf5_lsf.txt  recorder_genome_pegasus_32_lsf.txt  recorder_genome_pegasus_32_lsf_2.txt  recorder_genome_pegasus_32_lsf_3.txt  recorder_hacc_32_0_lsf.txt  recorder_lbann_cosmoflow_32.txt  recorder_lbann_cosmoflow_32_lsf.txt  recorder_lbann_jag_32_lsf.txt  recorder_montage_32_lsf.txt  recorder_montage_pegasus_32_lsf.txt  recorder_mummi_wemul_32_32_lsf.txt  result-cm1-formatted.txt  result-cm1-old.txt  result-hacc-rwm-2.txt  result-hacc.txt  scores_tmid_10.json
results/_old/: result-cm1-rwm.txt  result-montage-rwm.txt
results/_prebag/: darshan_dlp_1_40_local.txt  darshan_dlp_1_40_lsf.txt  darshan_dlp_4_40_local.txt  darshan_dlp_4_40_lsf.txt  (+9 more)
samples/: script-reference.txt
scripts/: line_number.sh  recorder-to-parquet.sh  run_darshan_repetition_tests.sh  run_recorder_e2e_tests.sh  run_recorder_repetition_tests.sh  run_recorder_scale_tests.sh  run_recorder_slope_threshold_tests.sh  run_recorder_threshold_tests.sh
subprojects/: backward-cpp.wrap  cpp-logger.wrap  recorder.wrap
tests/: conftest.py  prepare_test_data.sh  test_main.py
tools/: CMakeLists.txt  meson.build  spack.yaml
vani/: __main__.py  analyzer.py  base.py  daemon.py  dask.py  recorder.py
vani/common/: enums.py  (+7 more)
wisio/: __main__.py  analysis.py  analysis_result.py  analysis_utils.py  analyzer.py  analyzer_result.py  base.py  bottlenecks.py  cluster.py  cluster_management.py  cluster_manager.py  config.py  constants.py  darshan.py  dask.py  dftracer.py  dlp.py  meson.build  metrics.py  output.py  plots.py  recorder.py  rule_engine.py  rules.py  scoring.py  types.py
wisio/_darshan/: analysis.py  meson.build
wisio/_recorder/: analysis.py  bottlenecks.py  bottlenecks_new.py  constants.py  rules.py
wisio/configs/: meson.build
wisio/configs/analysis/: darshan.yaml  default.yaml  recorder.yaml
wisio/utils/: collection_utils.py  common_utils.py  dask_agg.py  dask_utils.py  enum_utils.py  env_utils.py  expr_utils.py  logger.py  meson.build  string_utils.py  visualization.py
wisio_converter/: .gitignore  spack.yaml
(+29 files in other folders)
