py.install_sources(
    [
        '__init__.py',
        '__main__.py',
        'analysis.py',
        'analysis_utils.py',
        'analyzer.py',
        'analyzer_result.py',
        'cluster_management.py',
        'constants.py',
        'darshan.py',
        'dlp.py',
        'recorder.py',
        'rule_engine.py',
        'rules.py',
        'scoring.py',
        'types.py',
    ],
    subdir: 'wisio'
)

subdir('_darshan')
subdir('utils')
