py.install_sources(
    [
        '__init__.py',
        '__main__.py',
        'analysis.py',
        'analysis_utils.py',
        'analyzer.py',
        'cluster.py',
        'config.py',
        'constants.py',
        'darshan.py',
        'dftracer.py',
        'metrics.py',
        'output.py',
        'recorder.py',
        'rule_engine.py',
        'rules.py',
        'types.py',
    ],
    subdir: 'wisio',
)

subdir('_darshan')
subdir('utils')