py.install_sources(
    [
        '__init__.py',
        'collection_utils.py',
        'common_utils.py',
        'dask_agg.py',
        'dask_utils.py',
        'distributed_plugins.py',
        'env_utils.py',
        'expr_utils.py',
        'file_utils.py',
        'json_encoders.py',
        'logger.py',
        'yaml_utils.py',
    ],
    subdir: 'wisio/utils',
)